# Sudoku

Projekt_sudoku/: CMakeLists.txt  Game.cpp  Game.h  GameTests.cpp  SudokuPlan.cpp  SudokuPlan.h  SudokuPlanTests.cpp
